--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -76,6 +76,22 @@
 				MX6QDL_PAD_NANDF_D1__GPIO2_IO01		0x1b0b0 /* WP */
 			>;
 		};
+
+		pinctrl_usdhc4: usdhc4grp {
+			fsl,pins = <
+				MX6QDL_PAD_SD4_CLK__SD4_CLK		0x1b0b0
+				MX6QDL_PAD_SD4_CMD__SD4_CMD		0x1b0b0
+				MX6QDL_PAD_SD4_DAT0__SD4_DATA0		0x1b0b0
+				MX6QDL_PAD_SD4_DAT1__SD4_DATA1		0x1b0b0
+				MX6QDL_PAD_SD4_DAT2__SD4_DATA2		0x1b0b0
+				MX6QDL_PAD_SD4_DAT3__SD4_DATA3		0x1b0b0
+				MX6QDL_PAD_SD4_DAT4__SD4_DATA4		0x1b0b0
+				MX6QDL_PAD_SD4_DAT5__SD4_DATA5		0x1b0b0
+				MX6QDL_PAD_SD4_DAT6__SD4_DATA6		0x1b0b0
+				MX6QDL_PAD_SD4_DAT7__SD4_DATA7		0x1b0b0
+			>;
+		};
+
 	};
 };
 
@@ -112,5 +128,17 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 	};
+};
+
+&usdhc4 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usdhc4>;
+
+	vmmc-supply = <&reg_3p3v>;
+
+	non-removable;
+	bus-width = <8>;
+
+	status = "okay";
 };
 
