arm: imx6: add barebox environment to dts
Add barebox environment nodes to the board specific dts.

This commit was originally done by Zahari for vertigo project!

Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/arch/arm/dts/imx6s-dmo-imx6-ppc.dts
+++ b/arch/arm/dts/imx6s-dmo-imx6-ppc.dts
@@ -10,3 +10,49 @@
  */
 
 #include <arm/imx6s-dmo-imx6-ppc.dts>
+
+/ {
+	chosen {
+		environment-sd {
+			compatible = "barebox,environment";
+			device-path = &usdhc3, "partname:barebox-environment";
+			status = "disabled";
+		};
+
+		environment-spi {
+			compatible = "barebox,environment";
+			device-path = &flash, "partname:barebox-environment";
+			status = "disabled";
+		};
+	};
+};
+
+&flash {
+	#address-cells = <1>;
+	#size-cells = <1>;
+
+	partition@0 {
+		label = "barebox";
+		reg = <0x0 0x80000>;
+	};
+
+	partition@1 {
+		label = "barebox-environment";
+		reg = <0x80000 0x20000>;
+	};
+};
+
+&usdhc3 {
+	#address-cells = <1>;
+	#size-cells = <1>;
+
+	partition@0 {
+		label = "barebox";
+		reg = <0x0 0x80000>;
+	};
+
+	partition@1 {
+		label = "barebox-environment";
+		reg = <0x80000 0x20000>;
+	};
+};
