--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -15,8 +15,6 @@
 #include <dt-bindings/gpio/gpio.h>
 #include "imx6dl.dtsi"
 
-#define NO_PAD_CTRL	(1 << 31)
-
 / {
 	model = "Data Modul AG iMX6-based PPC";
 	compatible = "dmo,imx6-ppc", "fsl,imx6dl";
@@ -48,7 +46,71 @@
 };
 
 &iomuxc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hog>;
+
 	imx6s-dmp-imx6-ppc {
+		pinctrl_hog: hoggrp {
+			fsl,pins = <
+				/* func down 22K PU*/
+				MX6QDL_PAD_NANDF_D6__GPIO2_IO06		0x1f0b0
+				/* func up 22K PU*/
+				MX6QDL_PAD_NANDF_D7__GPIO2_IO07		0x1f0b0
+				/* jog dial outa */
+				MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30	0x1b0b0
+				/* jog dial outb */
+				MX6QDL_PAD_CSI0_DAT13__GPIO5_IO31	0x1b0b0
+				/* job dial push */
+				MX6QDL_PAD_CSI0_DAT14__GPIO6_IO00	0x1b0b0
+				/* hwid 0 */
+				MX6QDL_PAD_SD2_CMD__GPIO1_IO11		0x1b0b0
+				/* hwid 1 */
+				MX6QDL_PAD_SD2_CLK__GPIO1_IO10		0x1b0b0
+				/* hwid 2 */
+				MX6QDL_PAD_SD2_DAT0__GPIO1_IO15		0x1b0b0
+				/* hwid 3 */
+				MX6QDL_PAD_SD2_DAT1__GPIO1_IO14		0x1b0b0
+				/* hwid 4 */
+				MX6QDL_PAD_SD2_DAT2__GPIO1_IO13		0x1b0b0
+				/* hwid 5 */
+				MX6QDL_PAD_SD2_DAT3__GPIO1_IO12         0x1b0b0
+				/* hwid 6 */
+				MX6QDL_PAD_SD1_CMD__GPIO1_IO18		0x1b0b0
+				/* hwid 7 */
+				MX6QDL_PAD_SD1_CLK__GPIO1_IO20          0x1b0b0
+				/* dram id 0 */
+				MX6QDL_PAD_EIM_D16__GPIO3_IO16		0x1b0b0
+				/* dram id 1 */
+				MX6QDL_PAD_EIM_D17__GPIO3_IO17		0x1b0b0
+				/* audmux */
+				MX6QDL_PAD_CSI0_DAT7__AUD3_RXD		0x1b0b0
+				MX6QDL_PAD_CSI0_DAT4__AUD3_TXC		0x1b0b0
+				MX6QDL_PAD_CSI0_DAT5__AUD3_TXD		0x1b0b0
+				MX6QDL_PAD_CSI0_DAT6__AUD3_TXFS		0x1b0b0
+				/* stgl500codec */
+				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x1b0b0
+				/* pcie */
+				MX6QDL_PAD_EIM_D19__GPIO3_IO19		0x1b0b0
+				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20	0x1b0b0
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x1b0b0
+				MX6QDL_PAD_GPIO_19__GPIO4_IO05		0x1b0b0
+				/* backlight */
+				MX6QDL_PAD_SD1_DAT3__PWM1_OUT		0x1b0b0
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x1b0b0
+				/* uart3 */
+				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b0
+				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b0
+				/* usbh1 */
+				MX6QDL_PAD_EIM_D30__USB_H1_OC		0x1b0b0
+				/* can1 */
+				MX6QDL_PAD_GPIO_8__FLEXCAN1_RX		0x1b0b0
+				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x1b0b0
+				/* can2 */
+				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x1b0b0
+				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x1b0b0
+			>;
+		};
+
 		pinctrl_uart1: uart1grp {
 			fsl,pins = <
 				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA	0x1b0b0
@@ -61,14 +123,14 @@
 				MX6QDL_PAD_DISP0_DAT0__ECSPI3_SCLK	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT2__ECSPI3_MISO	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT1__ECSPI3_MOSI	0x1b0b0
-				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	NO_PAD_CTRL
+				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	0x1b0b0
 			>;
 		};
 
 		pinctrl_usdhc3: usdhc3grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD3_CMD__SD3_CMD		0x1b0b0
-				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x1b0b0
+				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x1b0b1
 				MX6QDL_PAD_SD3_DAT0__SD3_DATA0		0x1b0b0
 				MX6QDL_PAD_SD3_DAT1__SD3_DATA1		0x1b0b0
 				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x1b0b0
@@ -80,7 +142,7 @@
 
 		pinctrl_usdhc4: usdhc4grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD4_CLK__SD4_CLK		0x1b0b0
++				MX6QDL_PAD_SD4_CLK__SD4_CLK		0x1b0b1
 				MX6QDL_PAD_SD4_CMD__SD4_CMD		0x1b0b0
 				MX6QDL_PAD_SD4_DAT0__SD4_DATA0		0x1b0b0
 				MX6QDL_PAD_SD4_DAT1__SD4_DATA1		0x1b0b0
@@ -116,8 +178,10 @@
 
 		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x1b0b0
 				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID	0x1b0b0
+				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x1b0b0
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x1b0b0
+				MX6QDL_PAD_EIM_D21__USB_OTG_OC		0x1b0b0
 			>;
 		};
 
@@ -132,28 +196,24 @@
 &usdhc3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3>;
-
 	vmmc-supply = <&sw2_reg>;
-	cd-gpios = <&gpio2 0 GPIO_ACTIVE_HIGH>;
+	cd-gpios = <&gpio2 0 GPIO_ACTIVE_LOW>;
+	/* WP cannot be really used on uSD socket */
 	wp-gpios = <&gpio2 1 GPIO_ACTIVE_HIGH>;
-
 	status = "okay";
 };
 
 &ecspi3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3>;
-
 	fsl,spi-num-chipselects = <1>;
 	cs-gpios = <&gpio4 24 GPIO_ACTIVE_HIGH>;
-
 	status = "okay";
 
 	flash: m25p80@0 {
 		compatible = "m25p80";
 		spi-max-frequency = <40000000>;
 		reg = <0>;
-
 		#address-cells = <1>;
 		#size-cells = <1>;
 	};
@@ -162,30 +222,23 @@
 &usdhc4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc4>;
-
 	vmmc-supply = <&sw2_reg>;
-
 	non-removable;
 	bus-width = <8>;
-
 	status = "okay";
 };
 
 &i2c1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
-
 	clock-frequency = <100000>;
-
 	status = "okay";
 };
 
 &i2c2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
-
 	clock-frequency = <100000>;
-
 	status = "okay";
 
 	pmic: pfuze100@08 {
@@ -293,19 +346,14 @@
 &i2c3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3>;
-
 	clock-frequency = <100000>;
-
 	status = "okay";
 };
 
 &usbotg {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg>;
-
 	vbus-supply = <&reg_usb_otg_vbus>;
-	disable-over-current;
-
 	dr_mode = "host";
 	status = "okay";
 };
