arm: dts: disable usb over current for dmo-imx6-ppc board
The imx6 usb over current should be disabled in barebox because it breaks
the kernel initialisation of the usb.

This commit was originally done by Zahari for vertigo project!

Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -354,6 +354,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg>;
 	vbus-supply = <&reg_usb_otg_vbus>;
+	disable-over-current;
 	dr_mode = "host";
 	status = "okay";
 };
