arm: imx6: add swu ability
This commit was originally done by Reyhaneh for vertigo project!

Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/arch/arm/configs/dmo-imx6-ppc_defconfig
+++ b/arch/arm/configs/dmo-imx6-ppc_defconfig
@@ -380,6 +380,7 @@ CONFIG_CMD_TIME=y
 # CONFIG_CMD_DHRYSTONE is not set
 # CONFIG_CMD_SPD_DECODE is not set
 # CONFIG_NET is not set
+CONFIG_CMD_SWU=y
 
 #
 # Drivers
