fix configuration changes in new barebox
some configuration in barebox moved from boot command category to memory layout.

This commit was originally done by Reyhaneh for vertigo project!

Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/arch/arm/configs/dmo-imx6-ppc_defconfig
+++ b/arch/arm/configs/dmo-imx6-ppc_defconfig
@@ -211,6 +211,11 @@ CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/dmo-imx6-ppc/env"
 # CONFIG_POLLER is not set
 # CONFIG_STATE is not set
 CONFIG_RESET_SOURCE=y
+CONFIG_BOOTM_SHOW_TYPE=y
+CONFIG_BOOTM_VERBOSE=y
+CONFIG_BOOTM_INITRD=y
+CONFIG_BOOTM_OFTREE=y
+CONFIG_BOOTM_OFTREE_UIMAGE=y
 
 #
 # Debugging
@@ -253,11 +258,6 @@ CONFIG_CMD_VERSION=y
 CONFIG_FLEXIBLE_BOOTARGS=y
 CONFIG_CMD_BOOT=y
 CONFIG_CMD_BOOTM=y
-CONFIG_CMD_BOOTM_SHOW_TYPE=y
-CONFIG_CMD_BOOTM_VERBOSE=y
-CONFIG_CMD_BOOTM_INITRD=y
-CONFIG_CMD_BOOTM_OFTREE=y
-CONFIG_CMD_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_CMD_BOOTM_AIMAGE is not set
 # CONFIG_CMD_BOOTM_FITIMAGE is not set
 # CONFIG_CMD_BOOTU is not set
