--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -52,16 +52,12 @@
 	imx6s-dmp-imx6-ppc {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
-				/* func down 22K PU*/
-				MX6QDL_PAD_NANDF_D6__GPIO2_IO06		0x1f0b0
-				/* func up 22K PU*/
-				MX6QDL_PAD_NANDF_D7__GPIO2_IO07		0x1f0b0
-				/* jog dial outa */
-				MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30	0x1b0b0
-				/* jog dial outb */
-				MX6QDL_PAD_CSI0_DAT13__GPIO5_IO31	0x1b0b0
+				/* jog dial ina */
+				MX6QDL_PAD_CSI0_DAT16__GPIO6_IO02	0x0001B0B0
+				/* jog dial inb */
+				MX6QDL_PAD_CSI0_DAT17__GPIO6_IO03	0x0001B0B0
 				/* job dial push */
-				MX6QDL_PAD_CSI0_DAT14__GPIO6_IO00	0x1b0b0
+				MX6QDL_PAD_DISP0_DAT9__GPIO4_IO30	0x0001B0B0
 				/* hwid 0 */
 				MX6QDL_PAD_SD2_CMD__GPIO1_IO11		0x1b0b0
 				/* hwid 1 */
@@ -73,13 +69,13 @@
 				/* hwid 4 */
 				MX6QDL_PAD_SD2_DAT2__GPIO1_IO13		0x1b0b0
 				/* hwid 5 */
-				MX6QDL_PAD_SD2_DAT3__GPIO1_IO12         0x1b0b0
+				MX6QDL_PAD_SD2_DAT3__GPIO1_IO12		0x1b0b0
 				/* hwid 6 */
 				MX6QDL_PAD_SD1_CMD__GPIO1_IO18		0x1b0b0
 				/* hwid 7 */
-				MX6QDL_PAD_SD1_CLK__GPIO1_IO20          0x1b0b0
+				MX6QDL_PAD_SD1_CLK__GPIO1_IO20		0x1b0b0
 				/* dram id 0 */
-				MX6QDL_PAD_EIM_D16__GPIO3_IO16		0x1b0b0
+				MX6QDL_PAD_EIM_D18__GPIO3_IO18		0x0001B0B0
 				/* dram id 1 */
 				MX6QDL_PAD_EIM_D17__GPIO3_IO17		0x1b0b0
 				/* audmux */
@@ -87,6 +83,7 @@
 				MX6QDL_PAD_CSI0_DAT4__AUD3_TXC		0x1b0b0
 				MX6QDL_PAD_CSI0_DAT5__AUD3_TXD		0x1b0b0
 				MX6QDL_PAD_CSI0_DAT6__AUD3_TXFS		0x1b0b0
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x0001B0B0
 				/* stgl500codec */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x1b0b0
 				/* pcie */
@@ -95,19 +92,42 @@
 				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x1b0b0
 				MX6QDL_PAD_GPIO_19__GPIO4_IO05		0x1b0b0
 				/* backlight */
-				MX6QDL_PAD_SD1_DAT3__PWM1_OUT		0x1b0b0
-				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x1b0b0
+				MX6QDL_PAD_GPIO_9__PWM1_OUT		0x0001B0B0
+				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x0001B0B0
+				/* uart2 */
+				MX6QDL_PAD_EIM_D26__UART2_TX_DATA	0x0001B0B0
+				MX6QDL_PAD_EIM_D27__UART2_RX_DATA	0x0001B0B0
 				/* uart3 */
 				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b0
 				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b0
+				/* uart4 */
+				MX6QDL_PAD_CSI0_DAT12__UART4_TX_DATA	0x0001B0B0
+				MX6QDL_PAD_CSI0_DAT13__UART4_RX_DATA	0x0001B0B0
+				/* uart5 */
+				MX6QDL_PAD_CSI0_DAT14__UART5_TX_DATA	0x0001B0B0
+				MX6QDL_PAD_CSI0_DAT15__UART5_RX_DATA	0x0001B0B0
+				MX6QDL_PAD_CSI0_DAT18__UART5_RTS_B	0x0001B0B0
+				MX6QDL_PAD_CSI0_DAT19__UART5_CTS_B	0x0001B0B0
 				/* usbh1 */
-				MX6QDL_PAD_EIM_D30__USB_H1_OC		0x1b0b0
+				MX6QDL_PAD_GPIO_16__GPIO7_IO11		0x0001B0B0
 				/* can1 */
 				MX6QDL_PAD_GPIO_8__FLEXCAN1_RX		0x1b0b0
 				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x1b0b0
 				/* can2 */
-				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x1b0b0
-				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x1b0b0
+				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x000130B0
+				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x0001B0B0
+				/* watchdog */
+				MX6QDL_PAD_NANDF_D5__GPIO2_IO05		0x0001B0B0
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x0001B0B0
+				/* ecspi4 */
+				MX6QDL_PAD_DISP0_DAT15__ECSPI1_SS1	0x0001B0B0
+				MX6QDL_PAD_KEY_COL0__ECSPI1_SCLK	0x0001B0B0
+				MX6QDL_PAD_KEY_COL1__ECSPI1_MISO	0x0001B0B0
+				MX6QDL_PAD_KEY_ROW0__ECSPI1_MOSI	0x0001B0B0
+				MX6QDL_PAD_KEY_ROW1__ECSPI1_SS0		0x0001B0B0
+				/* hdmi */
+				MX6QDL_PAD_EIM_D16__HDMI_TX_DDC_SDA	0x0001B0B0
+				MX6QDL_PAD_EIM_EB2__HDMI_TX_DDC_SCL	0x0001B0B0
 			>;
 		};
 
@@ -123,7 +143,7 @@
 				MX6QDL_PAD_DISP0_DAT0__ECSPI3_SCLK	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT2__ECSPI3_MISO	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT1__ECSPI3_MOSI	0x1b0b0
-				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	0x1b0b0
+				MX6QDL_PAD_DISP0_DAT3__ECSPI3_SS0	0x0001B0B0
 			>;
 		};
 
@@ -157,35 +177,64 @@
 
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b0
-				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b0
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x0001B8B0
+				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x0001B8B0
 			>;
 		};
 
 		pinctrl_i2c2: i2c2grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL3__I2C2_SCL		0x4001b8b0
-				MX6QDL_PAD_KEY_ROW3__I2C2_SDA		0x4001b8b0
+				MX6QDL_PAD_KEY_COL3__I2C2_SCL		0x0001B8B0
+				MX6QDL_PAD_KEY_ROW3__I2C2_SDA		0x0001B8B0
 			>;
 		};
 
 		pinctrl_i2c3: i2c3grp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b0
-				MX6QDL_PAD_GPIO_6__I2C3_SDA		0x4001b8b0
+				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x0001B8B0
+				MX6QDL_PAD_GPIO_6__I2C3_SDA		0x0001B8B0
 			>;
 		};
 
 		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID	0x1b0b0
-				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x1b0b0
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x1b0b0
+				MX6QDL_PAD_EIM_D22__USB_OTG_PWR		0x000130B0
 				MX6QDL_PAD_EIM_D21__USB_OTG_OC		0x1b0b0
+				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x0001B0B0
 			>;
 		};
 
+		pinctrl_fec: fecgrp { /* Ethernet */
+			fsl,pins = <
+				MX6QDL_PAD_ENET_MDC__ENET_MDC		0x0001B0B0
+				MX6QDL_PAD_ENET_MDIO__ENET_MDIO		0x0001B0B0
+				MX6QDL_PAD_ENET_REF_CLK__ENET_TX_CLK	0x0001B0B0
+				MX6QDL_PAD_RGMII_RD0__RGMII_RD0		0x0001B030
+				MX6QDL_PAD_RGMII_RD1__RGMII_RD1		0x0001B030
+				MX6QDL_PAD_RGMII_RD2__RGMII_RD2		0x0001B030
+				MX6QDL_PAD_RGMII_RD3__RGMII_RD3		0x0001B030
+				MX6QDL_PAD_RGMII_RXC__RGMII_RXC		0x00013030
+				MX6QDL_PAD_RGMII_RX_CTL__RGMII_RX_CTL	0x00013030
+				MX6QDL_PAD_RGMII_TD0__RGMII_TD0		0x0001B030
+				MX6QDL_PAD_RGMII_TD1__RGMII_TD1		0x0001B030
+				MX6QDL_PAD_RGMII_TD2__RGMII_TD2		0x0001B030
+				MX6QDL_PAD_RGMII_TD3__RGMII_TD3		0x0001B030
+				MX6QDL_PAD_RGMII_TXC__RGMII_TXC		0x00013030
+				MX6QDL_PAD_RGMII_TX_CTL__RGMII_TX_CTL	0x00013030
+				MX6QDL_PAD_ENET_CRS_DV__GPIO1_IO25	0x0001B0B0
+				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x0001B0B0
+			>;
+		};
 	};
+};
+
+&fec {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_fec>;
+	phy-mode = "rgmii";
+	phy-reset-gpios = <&gpio1 25 0>; /* GPIO1_IO25  */
+	phy-supply = <&sw4_reg>;
+	status = "okay";
 };
 
 &uart1 {
@@ -193,6 +242,7 @@
 	pinctrl-0 = <&pinctrl_uart1>;
 	status = "okay";
 };
+
 &usdhc3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3>;
