arm:dts: spi chip-select uses gpio
Signed-off-by: Reyhaneh Yazdani <reyhane.y84@gmail.com>

--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -153,7 +153,7 @@
 				MX6QDL_PAD_DISP0_DAT0__ECSPI3_SCLK	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT2__ECSPI3_MISO	0x1b0b0
 				MX6QDL_PAD_DISP0_DAT1__ECSPI3_MOSI	0x1b0b0
-				MX6QDL_PAD_DISP0_DAT3__ECSPI3_SS0	0x0001B0B0
+				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	0x1b0b0
 			>;
 		};
 
