arm:dts: usbotg: add pull-up, and use gpio pins functionality
Usbotg was not detected as a devcie. because of not correct pin assigning
for power. It sould be set in a way to use GPIO functionality.

Signed-off-by: Reyhaneh Yazdani <reyhane.y84@gmail.com>

--- a/dts/src/arm/imx6s-dmo-imx6-ppc.dts
+++ b/dts/src/arm/imx6s-dmo-imx6-ppc.dts
@@ -208,7 +208,7 @@
 
 		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-				MX6QDL_PAD_EIM_D22__USB_OTG_PWR		0x000130B0
+				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x1b0b0
 				MX6QDL_PAD_EIM_D21__USB_OTG_OC		0x1b0b0
 				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x0001B0B0
 			>;
