arm:dts: enable ocotp to fuze mac address
Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/arch/arm/configs/dmo-imx6-ppc_defconfig
+++ b/arch/arm/configs/dmo-imx6-ppc_defconfig
@@ -98,7 +98,8 @@ CONFIG_MACH_DMO_IMX6_PPC=y
 #
 # CONFIG_ARCH_IMX_USBLOADER is not set
 # CONFIG_IMX_IIM is not set
-# CONFIG_IMX_OCOTP is not set
+CONFIG_IMX_OCOTP=y
+CONFIG_IMX_OCOTP_WRITE=y
 # CONFIG_HABV4 is not set
 CONFIG_ARM_ASM_UNIFIED=y
 CONFIG_AEABI=y
@@ -379,7 +380,7 @@ CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIME=y
 # CONFIG_CMD_DHRYSTONE is not set
 # CONFIG_CMD_SPD_DECODE is not set
-# CONFIG_NET is not set
+CONFIG_NET=y
 CONFIG_CMD_SWU=y
 
 #
