dts: define common dts file qdl, rename solo dts file
As PPC has diffenret variants: solo, dual and quad, it is needed to define
sepearte dts file.

Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/arch/arm/dts/imx6s-dmo-ppc.dts
+++ b/arch/arm/dts/imx6s-dmo-ppc.dts
@@ -9,7 +9,7 @@
  * http://www.gnu.org/copyleft/gpl.html
  */
 
-#include <arm/imx6s-dmo-imx6-ppc.dts>
+#include <arm/imx6s-dmo-ppc.dts>
 
 / {
 	chosen {
