dts: add imx6q-ppc support
It needs renaming files and also adding new files for quad

Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/dts/src/arm/imx6qdl-dmo-ppc.dtsi
+++ b/dts/src/arm/imx6qdl-dmo-ppc.dtsi
@@ -10,7 +10,6 @@
  * http://www.opensource.org/licenses/gpl-license.html
  * http://www.gnu.org/copyleft/gpl.html
  */
-/dts-v1/;
 
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/net/ti-dp83867.h>
@@ -52,7 +51,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog>;
 
-	imx6s-dmp-imx6-ppc {
+	imx6qdl-dmo-ppc {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				/* jog dial ina */
