--- a/dts/src/arm/imx6dl-dmo-ppc.dts
+++ b/dts/src/arm/imx6dl-dmo-ppc.dts
@@ -13,11 +13,11 @@
 /dts-v1/;
 
 #include "imx6dl.dtsi"
-#include "imx6qdl-dmo-ppc.dts"
+#include "imx6qdl-dmo-ppc.dtsi"
 
 / {
-	model = "Data Modul AG eDM-SBC-iMX6-PPC-S-1G";
-	compatible = "dmo,imx6-ppc", "fsl,imx6dl";
+	model = "Data Modul AG eDM-SBC-iMX6-PPC-DL/S-1G";
+	compatible = "dmo,imx6dl-ppc", "fsl,imx6dl";
 
 	memory {
 		reg = <0x10000000 0x40000000>;
