dts: pull-down LVDS-EN
Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/dts/src/arm/imx6qdl-dmo-ppc.dtsi
+++ b/dts/src/arm/imx6qdl-dmo-ppc.dtsi
@@ -95,7 +95,7 @@
 				MX6QDL_PAD_GPIO_19__GPIO4_IO05		0x1b0b0
 				/* backlight */
 				MX6QDL_PAD_GPIO_9__PWM1_OUT		0x0001B0B0
-				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x0001B0B0
+				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x000130B0
 				/* uart2 */
 				MX6QDL_PAD_EIM_D26__UART2_TX_DATA	0x0001B0B0
 				MX6QDL_PAD_EIM_D27__UART2_RX_DATA	0x0001B0B0
