dts: remove memory node
memory size is detected now automatically inside source
and no need to specifies inside device tree

Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/dts/src/arm/imx6dl-dmo-ppc.dts
+++ b/dts/src/arm/imx6dl-dmo-ppc.dts
@@ -16,10 +16,6 @@
 #include "imx6qdl-dmo-ppc.dtsi"
 
 / {
-	model = "Data Modul AG eDM-SBC-iMX6-PPC-DL/S-1G";
+	model = "Data Modul AG eDM-SBC-iMX6-PPC-DL/S";
 	compatible = "dmo,imx6dl-ppc", "fsl,imx6dl";
-
-	memory {
-		reg = <0x10000000 0x40000000>;
-	};
 };
