--- a/dts/src/arm/imx6q-dmo-ppc.dts
+++ b/dts/src/arm/imx6q-dmo-ppc.dts
@@ -16,10 +16,6 @@
 #include "imx6qdl-dmo-ppc.dtsi"
 
 / {
-	model = "Data Modul AG eDM-SBC-iMX6-PPC-Q/D-2G";
+	model = "Data Modul AG eDM-SBC-iMX6-PPC-Q/D";
 	compatible = "dmo,imx6q-ppc", "fsl,imx6q";
-
-	memory {
-		reg = <0x10000000 0x80000000>;
-	};
 };
