enable dmesg command
Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/arch/arm/configs/dmo-imx6-ppc_defconfig
+++ b/arch/arm/configs/dmo-imx6-ppc_defconfig
@@ -242,7 +242,7 @@ CONFIG_COMPILE_MEMORY=y
 #
 CONFIG_CMD_ARM_CPUINFO=y
 CONFIG_CMD_DEVINFO=y
-# CONFIG_CMD_DMESG is not set
+CONFIG_CMD_DMESG=y
 CONFIG_CMD_DRVINFO=y
 CONFIG_CMD_HELP=y
 # CONFIG_LONGHELP is not set
