enable display detection in barebox
By this commit, it is possible to change the display without updating the oftree
For this purpose, there are some requirements:
- Name of the dts-file should contain display ID, which is stored also inside
  touch controller. It must start with _12
- All supported dts files are placed in boot partition of boot device

The procedure:
Barebox reads touch controller to get display ID, then search from all dts-files
the appropriate, which its name contains display ID.
If barebox cannot find it, it will use oftree-file as "oftree" in boot script.

Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/commands/Kconfig
+++ b/commands/Kconfig
@@ -2115,6 +2115,12 @@ config CMD_SPD_DECODE
 	help
 	  decode spd eeprom
 
+config CMD_DTS_DETECT
+	tristate
+	prompt "dts_detect"
+	help
+	  dts_detect detects appropriate device tree regarding display
+
 config CMD_SWU
 	tristate
 	depends on USB_HOST && USB_IMX_CHIPIDEA && USB_EHCI && USB_STORAGE
