--- a/commands/Makefile
+++ b/commands/Makefile
@@ -121,3 +121,4 @@ obj-$(CONFIG_CMD_SPD_DECODE)	+= spd_decode.o
 obj-$(CONFIG_CMD_MMC_EXTCSD)	+= mmc_extcsd.o
 obj-$(CONFIG_CMD_NAND_BITFLIP)	+= nand-bitflip.o
 obj-$(CONFIG_CMD_SWU)		+= swupd.o
+obj-$(CONFIG_CMD_DTS_DETECT)		+= dts_detect.o
