enable dts_detect command in dmo config
Signed-off-by: reyhanehy <reyhane.y84@gmail.com>

--- a/arch/arm/configs/dmo-imx6-ppc_defconfig
+++ b/arch/arm/configs/dmo-imx6-ppc_defconfig
@@ -626,3 +626,4 @@ CONFIG_DIGEST_MD5_GENERIC=y
 # CONFIG_DIGEST_SHA1_ARM is not set
 # CONFIG_DIGEST_SHA256_ARM is not set
 # CONFIG_CRYPTO_KEYSTORE is not set
+CONFIG_CMD_DTS_DETECT=y
