dts: change ENET_REF_CLK-pin from pullup to pulldown
Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/dts/src/arm/imx6qdl-dmo-ppc.dtsi
+++ b/dts/src/arm/imx6qdl-dmo-ppc.dtsi
@@ -214,7 +214,7 @@
 			fsl,pins = <
 				MX6QDL_PAD_ENET_MDC__ENET_MDC		0x0001B0B0
 				MX6QDL_PAD_ENET_MDIO__ENET_MDIO		0x0001B0B0
-				MX6QDL_PAD_ENET_REF_CLK__ENET_TX_CLK	0x0001B0B0
+				MX6QDL_PAD_ENET_REF_CLK__ENET_TX_CLK	0x00013030
 				MX6QDL_PAD_RGMII_RD0__RGMII_RD0		0x0001B030
 				MX6QDL_PAD_RGMII_RD1__RGMII_RD1		0x0001B030
 				MX6QDL_PAD_RGMII_RD2__RGMII_RD2		0x0001B030
