lowlevel: now also all recovery images will be build during one single make so there is only one repo needed for standard (dynamic DRAM) image as well as for the recovery images
Signed-off-by: Elmar Albert <ealbert@data-modul.com>

--- a/arch/arm/boards/dmo-imx6-ppc/Makefile
+++ b/arch/arm/boards/dmo-imx6-ppc/Makefile
@@ -1,3 +1,20 @@
-obj-y += board.o flash-header-dmo-imx6-ppc.dcd.o
-extra-y += flash-header-dmo-imx6-ppc.dcd.S flash-header-dmo-imx6-ppc.dcd
+obj-y += board.o
+obj-y += flash-header-dmo-imx6-ppc.dcd.o \
+         flash-header-dmo-imx6dl-ppc_4G_32bit.dcd.o \
+         flash-header-dmo-imx6q-ppc_2G_64bit.dcd.o \
+         flash-header-dmo-imx6q-ppc_4G_32bit.dcd.o \
+         flash-header-dmo-imx6q-ppc_4G_64bit.dcd.o
+         
+extra-y += flash-header-dmo-imx6-ppc.dcd.S \
+           flash-header-dmo-imx6dl-ppc_4G_32bit.dcd.S \
+           flash-header-dmo-imx6q-ppc_2G_64bit.dcd.S \
+           flash-header-dmo-imx6q-ppc_4G_32bit.dcd.S \
+           flash-header-dmo-imx6q-ppc_4G_64bit.dcd.S
+
+extra-y += flash-header-dmo-imx6-ppc.dcd \
+           flash-header-dmo-imx6dl-ppc_4G_32bit.dcd \
+           flash-header-dmo-imx6q-ppc_2G_64bit.dcd \
+           flash-header-dmo-imx6q-ppc_4G_32bit.dcd \
+           flash-header-dmo-imx6q-ppc_4G_64bit.dcd
+
 lwl-y += lowlevel.o
