--- a/images/Makefile.imx
+++ b/images/Makefile.imx
@@ -136,6 +136,11 @@ CFG_start_dmo_imx6_ppc.imx-sram-img = $(board)/dmo-imx6-ppc/flash-header-dmo-imx
 FILE_barebox-dmo-ppc.img = start_dmo_imx6_ppc.imx-sram-img
 image-$(CONFIG_MACH_DMO_IMX6_PPC) += barebox-dmo-ppc.img
 
+pblx-$(CONFIG_MACH_DMO_IMX6_PPC) += start_dmo_imx6dl_ppc_2G_32bit
+CFG_start_dmo_imx6dl_ppc_2G_32bit.pblx.imximg = $(board)/dmo-imx6-ppc/flash-header-dmo-imx6dl-ppc_2G_32bit.imxcfg
+FILE_barebox-imx6dl-dmo-ppc_2G_32bit.img = start_dmo_imx6dl_ppc_2G_32bit.pblx.imximg
+image-$(CONFIG_MACH_DMO_IMX6_PPC) += barebox-imx6dl-dmo-ppc_2G_32bit.img
+
 pblx-$(CONFIG_MACH_DMO_IMX6_PPC) += start_dmo_imx6dl_ppc_4G_32bit
 CFG_start_dmo_imx6dl_ppc_4G_32bit.pblx.imximg = $(board)/dmo-imx6-ppc/flash-header-dmo-imx6dl-ppc_4G_32bit.imxcfg
 FILE_barebox-imx6dl-dmo-ppc_4G_32bit.img = start_dmo_imx6dl_ppc_4G_32bit.pblx.imximg
